# control_asistencia_api

./: Dockerfile  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/config/: config.py
src/middleware/: acceso_middleware.py  token_middleware.py  token_verification_middleware.py
src/models/: recarga_request.py
src/routers/: almacenes.py  asistencias.py  consolidaciones.py  controllers.py  dispositivos.py  empleados.py  exepciones.py  recargas.py  registros.py  selfie.py  turnos.py  usuarios.py
src/utils/: utils.py
